; ModuleID = '/home/carl/AnghaBench/vlc/modules/audio_output/extr_auhal.c_AoUpdateListener.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/audio_output/extr_auhal.c_AoUpdateListener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@noErr = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [80 x i8] c"AudioObject%sPropertyListener failed, device id %i, prop: [%4.4s], OSStatus: %d\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"Add\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"Remove\00", align 1
@VLC_EGENERIC = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32*, i32, i8*)* @AoUpdateListener to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AoUpdateListener(i32* %0, i32 %1, i32 %2, i32* %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  %15 = load i32, i32* %9, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %6
  %18 = load i32, i32* %10, align 4
  %19 = load i32*, i32** %11, align 8
  %20 = load i32, i32* %12, align 4
  %21 = load i8*, i8** %13, align 8
  %22 = call i64 @AudioObjectAddPropertyListener(i32 %18, i32* %19, i32 %20, i8* %21)
  br label %29

23:                                               ; preds = %6
  %24 = load i32, i32* %10, align 4
  %25 = load i32*, i32** %11, align 8
  %26 = load i32, i32* %12, align 4
  %27 = load i8*, i8** %13, align 8
  %28 = call i64 @AudioObjectRemovePropertyListener(i32 %24, i32* %25, i32 %26, i8* %27)
  br label %29

29:                                               ; preds = %23, %17
  %30 = phi i64 [ %22, %17 ], [ %28, %23 ]
  store i64 %30, i64* %14, align 8
  %31 = load i64, i64* %14, align 8
  %32 = load i64, i64* @noErr, align 8
  %33 = icmp ne i64 %31, %32
  br i1 %33, label %34, label %48

34:                                               ; preds = %29
  %35 = load i32*, i32** %8, align 8
  %36 = load i32, i32* %9, align 4
  %37 = icmp ne i32 %36, 0
  %38 = zext i1 %37 to i64
  %39 = select i1 %37, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0)
  %40 = load i32, i32* %10, align 4
  %41 = load i32*, i32** %11, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 0
  %43 = bitcast i32* %42 to i8*
  %44 = load i64, i64* %14, align 8
  %45 = trunc i64 %44 to i32
  %46 = call i32 @msg_Err(i32* %35, i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str, i64 0, i64 0), i8* %39, i32 %40, i8* %43, i32 %45)
  %47 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %47, i32* %7, align 4
  br label %50

48:                                               ; preds = %29
  %49 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %49, i32* %7, align 4
  br label %50

50:                                               ; preds = %48, %34
  %51 = load i32, i32* %7, align 4
  ret i32 %51
}

declare dso_local i64 @AudioObjectAddPropertyListener(i32, i32*, i32, i8*) #1

declare dso_local i64 @AudioObjectRemovePropertyListener(i32, i32*, i32, i8*) #1

declare dso_local i32 @msg_Err(i32*, i8*, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
